# nleq2_for_pyodide

./: README.md  meson.build  pyproject.toml
nleq2/: __init__.py  meson.build
nleq2/nleq2/: meson.build  nleq2module.c  nleq2module_orig.c
nleq2/tests/: test_class.py
pyodide_recipe/: meta.yaml
utils/: update_pyodide_lockfile
