[build-system]
build-backend = 'mesonpy'
requires = [
  'meson-python',
  'meson>=1.2.3',
  'numpy'
]

[tool.meson-python.args]
compile = ['-j4']

[project]
name = 'mfm'
version = '1.0.4'
packages = ['mfm', 'mwm.fmath']
dependencies = ['numpy']
description = 'Project with mixed pure Python and Fortran sources'
readme = 'README.md'
requires-python = '>=3.9'
authors = [
  {name = 'Johann Rohwer', email = 'j.m.rohwer@gmail.com'},
]

