[build-system]
build-backend = 'nleq2'
requires = [
  'meson-python',
  'meson>=1.2.3',
  'numpy'
]

[tool.meson-python.args]
compile = ['-j4']

[project]
name = 'mfm'
version = '4.3'
packages = ['nleq2']
dependencies = ['numpy']
description = 'Project with mixed pure Python and Fortran sources'
readme = 'README.md'
requires-python = '>=3.9'
authors = [
  {name = 'Johann Rohwer', email = 'j.m.rohwer@gmail.com'},
]

