[build-system]
build-backend = 'mesonpy'
requires = [
  'meson-python',
  'meson>=1.2.3',
  'numpy'
]

[tool.meson-python.args]
compile = ['-j4']

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "class"

[project]
name = 'nleq2'
version = '4.3'
dependencies = ['numpy']
description = 'Project with mixed pure Python and Fortran sources'
requires-python = '>=3.9'
authors = [
  {name = 'Johann Rohwer', email = 'j.m.rohwer@gmail.com'},
]

